<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/app_background"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/text"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/tvAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvAgeText"
        android:textColor="@color/black"
        android:textSize="25sp"

        />

    <SeekBar
        android:id="@+id/sbAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:max="@string/maxAge"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_shape" />

    <TextView
        android:id="@+id/tvJeunez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvJeunezText"
        android:textColor="@color/black"
        android:textSize="25sp"

        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/rbtIsFasting"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/ouiText"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/rbtIsNotFasting"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/nonText"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RadioGroup>
    <EditText
        android:id="@+id/etMesureGlycemie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/valeurGlycemie" />
    <!-- listener implicitement créé android:onClick="Calculer" dans le content -->
    <Button
        android:id="@+id/btnConsulter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consulterText"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"

        />



</LinearLayout>